[package]
name = "legion_test"
version = "0.1.0"
authors = ["chemicstry <chemicstry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#legion = { git = "https://github.com/TomGillen/legion.git", branch = "experimental" }
legion = { path = "../legion" }
bit-set = "0.5"
