[package]
name = "query_proc"
version = "0.1.0"
authors = ["chemicstry <chemicstry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0"

[lib]
proc-macro = true
name = "query_proc"
path = "lib.rs"
